# opengl3-sandbox

./: .clang-format  App.cpp  App.h  CMakeLists.txt  CrashHandler.h  Crashable.h  Makefile  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  a.out  clang_format_all.sh  fragment_shader.glsl  main.cpp  utils.h  valgrind.supp  vertex_shader.glsl
data/mazes/: maze1.txt  maze2.txt  maze3.txt  maze4.txt  maze5.txt
lib/ConfigFactory/: CMakeLists.txt  Data.h
lib/ConfigFactory/src/: ConfigFactory.cpp
lib/framework/: CMakeLists.txt  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  State.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  geometry.h  geometry_io.h  utils.h
lib/graphics/: CMakeLists.txt  GlfwWrapper.cpp  GlfwWrapper.h  Renderer.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  TextureInterface.h  TextureLoader.h  VertexArray.cpp  Window.cpp  Window.h  config.h  textureInterface.h
lib/graphics/include/: Drawable.h  GlfwWrapper.h  Renderer.h  Shader.h  ShaderProgram.h  State.h  VertexArray.h  Window.h  utils.h
lib/graphics/src/: GlfwWrapper.cpp  Shader.cpp  ShaderProgram.cpp  TextureInterface.cpp  Window.cpp  textureInterface.cpp
lib/include/graphics/: Shader.h  VertexArray.h  geometry.h  geometry_io.h
lib/include/maze_builder/: builder.h
lib/logger/: CMakeLists.txt  logger.cpp  logger.h
lib/logger/include/: logger.h
lib/logging/: CMakeLists.txt  logging.cpp
lib/math/: CMakeLists.txt  Color.h  Point.h  geometry.h  types.h
lib/math/include/: geometry.h  geometry_io.h  types.h  types_io.h
lib/math/src/: Color.cpp
lib/maze_builder/: CMakeLists.txt  builder.cpp  builder.cpp.bak  builder.h  def.h  join_lines.cpp  join_lines.h  validator.cpp  validator.h
lib/maze_builder/include/: builder.h
lib/maze_builder/src/: builder.cpp
src/: App.cpp  App.h  Game.cpp  Game.h  HomeScreen.cpp  HomeScreen.h  Screen.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  config.h  config.h.in  main.cpp  utils.h
src/include/: ConfigFactory.h  Game.h  GameplayScreen.h  HomeScreen.h  Maze.h  Screen.h  ScreenManager.h  Ship.h  ShipCore.h  ShipsCollection.h  geometry.h  geometry_io.h
src/include/pilots/: pilot_base.h
src/maze/reader/: fromFile.cpp  fromFile.h
src/objects/: ConfigFactory.cpp  Game.cpp  Maze.cpp  Maze.h  ScreenManager.cpp  Ship.cpp  ShipsCollection.cpp  geometry.h
src/objects/pilots/: line_formation.cpp  pilot_base.h
src/screens/: GameplayScreen.cpp  HomeScreen.cpp  HomeScreen.h  Screen.h
src/shaders/: ship.frag  ship.vert  vertex_shader.glsl
